--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "engines": {
-    "node": ">=18"
+    "node": "21.x"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
