--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "remark-html": "^16.0.1"
   },
   "engines": {
-    "node": "21.x"
+    "node": ">=18"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
